# ChangeLog for sys-auth/munge
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-auth/munge/ChangeLog,v 1.1 2010/11/14 23:04:40 jsbronder Exp $

*munge-0.5.9 (14 Nov 2010)

  14 Nov 2010; Justin Bronder <jsbronder@gentoo.org> +munge-0.5.9.ebuild,
  +files/munged.confd, +files/munged.initd, +metadata.xml:
  Initial import.
