@@ -4,13 +4,13 @@ Hash: SHA1
 AUX munged.confd 410 RMD160 d2bb7fbf45253f6f4441e1953bafe36a8d41f7cd SHA1 26bf6e224276638dcb180ec543a6711a4200c060 SHA256 da77587b40217b6a5e0cff2c9d8a405cff34c42496d14626710934cb08e662c1
 AUX munged.initd 1027 RMD160 f8b992ded580f33a5719a7af23c56ed67034f5ba SHA1 2f11c9c4bbff34a029f2c2c5990421e6ae20b262 SHA256 e95546c51d3fa6365d4babb1a876175120a46610b69da3adeb9a480f7c3ea775
 DIST munge-0.5.9.tar.bz2 417572 RMD160 8c474ac2de0904938d15e46868d722acd88ab294 SHA1 4cc4d64a70525d85ee2d7a38bcc9b29d1e9b434e SHA256 40f63b3c6f205a1e12b72a489d0df6f6ec4e16728aa24d145a870acd539e818a
-EBUILD munge-0.5.9.ebuild 1379 RMD160 db18a6dacac085ca202ceba2c48d5b16ab787874 SHA1 619394b55a99d55a93aefaebc7711f298bdc1d48 SHA256 dd3b03fea016665f0e1776b956ab354dc1fe769462b72e394aaa270b6f98ea16
-MISC ChangeLog 384 RMD160 9d66618f47e9c116ae433f71e0776c4ac1d8487d SHA1 9fe34a83e1ce94a2c8a49567ead25fb0636ef7eb SHA256 513d0b2845c2ac069449c3040df7a9d1140627a0722cd9c5f788e01914c64c91
+EBUILD munge-0.5.9.ebuild 1504 RMD160 5b355fd991dfcfa014b288a6e7d47e7eb754c88f SHA1 5415ce39c949ef5406309c1798c75f5d88c4a607 SHA256 91b4e9d0ad49bbb3cd3c78c90462bd767b6c1d0bb1197c617968afe476bb9201
+MISC ChangeLog 583 RMD160 b52cd857ffbbb108c7ebb37629fc3a85f6f9179a SHA1 c3aaca8a3580b63283e67932823313aba9831f49 SHA256 929008f425e14c6c4d1265d6a9d6dc33593c919f07f0610183ddd37f54a7c561
 MISC metadata.xml 911 RMD160 9947c5011178ae099c86d6f8b5707d2263aa1139 SHA1 c97d23f69e19da79ac7a301ae64a1afaae5b4aac SHA256 326ffba73208c081c92af7bdc912d178c85dad1f86e45fe2ab8a7a059aad6ed8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAkzgaw0ACgkQ4MrvBE1wQ8mE9ACglEtW8RFzq/284h2BeMpB4psc
-sUsAnj2HHAtghJdBFBuYZDPEVPSYeM1w
-=WW1a
+iEYEARECAAYFAkz6huYACgkQ4MrvBE1wQ8lwLACgkUPqEvFmQAs+BfVdFKkCNXyo
++gcAn2owS3kJq98UXDfSVc9Rakr4bRxv
+=5T3Q
 -----END PGP SIGNATURE-----
